@@ -15,6 +15,7 @@ import io.airbyte.db.Databases;
 import io.airbyte.db.jdbc.JdbcDatabase;
 import java.sql.SQLException;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 import org.junit.Test;
 
@@ -37,16 +38,19 @@ public class NneOracleDestinationAcceptanceTest extends UnencryptedOracleDestina
             config.get("port").asText(),
             config.get("sid").asText()),
         "oracle.jdbc.driver.OracleDriver",
-        "oracle.net.encryption_client=REQUIRED;" +
-            "oracle.net.encryption_types_client=( "
-            + algorithm + " )");
+        getAdditionalProperties(algorithm));
 
     final String network_service_banner =
         "select network_service_banner from v$session_connect_info where sid in (select distinct sid from v$mystat)";
-    final List<JsonNode> collect = database.query(network_service_banner).collect(Collectors.toList());
+    final List<JsonNode> collect = database.query(network_service_banner).toList();
 
     assertThat(collect.get(2).get("NETWORK_SERVICE_BANNER").asText(),
         equals("Oracle Advanced Security: " + algorithm + " encryption"));
+  }
+
+  private Map<String, String> getAdditionalProperties(final String algorithm) {
+    return ImmutableMap.of("oracle.net.encryption_client", "REQUIRED",
+        "oracle.net.encryption_types_client", String.format("( %s )", algorithm));
   }
 
   @Test
@@ -67,9 +71,7 @@ public class NneOracleDestinationAcceptanceTest extends UnencryptedOracleDestina
             clone.get("port").asText(),
             clone.get("sid").asText()),
         "oracle.jdbc.driver.OracleDriver",
-        "oracle.net.encryption_client=REQUIRED;" +
-            "oracle.net.encryption_types_client=( "
-            + algorithm + " )");
+        getAdditionalProperties(algorithm));
 
     final String network_service_banner = "SELECT sys_context('USERENV', 'NETWORK_PROTOCOL') as network_protocol FROM dual";
     final List<JsonNode> collect = database.query(network_service_banner).collect(Collectors.toList());
